--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
       // "noUnusedLocals": true, Report errors on unused local variables.
       // "noUnusedParameters": true, Report errors on unused parameters.
       "noImplicitReturns": true, // Report error when not all code paths in function return a value if the function returns something
+      "experimentalDecorators": true
     },
     "exclude": ["node_modules"], // is excluded by default
 }
