--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/lodash": "^4.17.0",
+    "@types/node": "^20.11.30",
     "nodemon": "^3.0.3",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "class-validator": "^0.14.1",
+    "lodash": "^4.17.21"
   }
 }
